--- a/app/src/main/res/menu/team_member_context_menu.xml
+++ b/app/src/main/res/menu/team_member_context_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/context_call"
         android:title="Call" />
+    <item
+        android:id="@+id/context_send_sms"
+        android:title="Send Alert SMS" />
 </menu>
