--- a/app/src/main/res/layout/dialog_send_alert.xml
+++ b/app/src/main/res/layout/dialog_send_alert.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -26,10 +27,12 @@
         android:textSize="16sp"/>
 
     <TextView
+        android:id="@+id/alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="This message will be sent via SMS"
         android:textSize="14sp"
         android:textColor="#757575"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        tools:ignore="InvalidId" />
 </LinearLayout>
