--- a/app/src/main/res/menu/team_member_context_menu.xml
+++ b/app/src/main/res/menu/team_member_context_menu.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/context_send_sms"
         android:title="Send Alert SMS" />
+    <item
+        android:id="@+id/context_send_whatsapp"
+        android:title="Send WhatsApp Message" />
 </menu>
