--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,41 +4,42 @@
 
     <item
         android:id="@+id/menu_about"
-        android:icon="@drawable/ic_info"
         android:title="About Us"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_team_details"
-        android:icon="@drawable/ic_group"
         android:title="Team Details"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_team_members"
-        android:icon="@drawable/ic_person"
         android:title="Team Members"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_project"
-        android:icon="@drawable/ic_description"
         android:title="Project Description"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_birthdays"
-        android:icon="@drawable/ic_cake"
-        android:title="Set Birthdays"
+        android:title="Birthdays"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_location_tracking"
-        android:title="Track Location"
+        android:title="Location Tracking"
         app:showAsAction="never" />
+
     <item
         android:id="@+id/menu_system_status"
         android:title="System Status"
-        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <!-- Add this new item for custom graphics -->
+    <item
+        android:id="@+id/menu_custom_graphics"
+        android:title="Custom Graphics"
         app:showAsAction="never" />
 </menu>
