--- a/app/src/main/res/menu/team_member_popup_menu.xml
+++ b/app/src/main/res/menu/team_member_popup_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/popup_contact"
         android:title="Contact" />
+    <item
+        android:id="@+id/popup_change_pic"
+        android:title="Change Profile Pic" />
 </menu>
